# production-llm-platform

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  architecture.html  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/environments/: dev.env  prod.env  test.env
data/: README.md
data/corpus/: code-review.md  deployments.md  incident-response.md  observability.md
data/eval/: README.md  baseline.json  dataset.json
docs/: PROJECT_STATUS.md  architecture.md  coding-standards.md  contributing.md  development.md  slo.md
docs/adr/: 0001-stack-selection.md  0002-repo-structure.md  0003-configuration-approach.md  0004-streaming-transport.md  0005-datastore-connection-pooling.md  0006-agent-loop-and-orchestration.md  0007-database-migrations.md  0008-conversation-caching-strategy.md  0009-hermetic-llm-testing.md  0010-pre-rendered-diagrams.md  0011-embeddings-provider.md  0012-qdrant-vector-store.md  0013-citation-shape.md  0014-prompt-injection-mitigation.md  0015-live-provider-contract-test.md  0016-observability-stack.md  0017-rag-evaluation-and-regression-gate.md  0018-kubernetes-and-terraform.md  0019-api-authentication-rate-limiting-and-guardrails.md  0020-reliability-load-chaos-resilience-slos.md  README.md
docs/prompts/: handoff-stage-10.md  stage-01-foundation.md  stage-02-api.md  stage-03-agents.md  stage-04-rag.md  stage-05-observability.md  stage-06-mlops.md  stage-07-kubernetes.md  stage-08-security.md  stage-09-reliability.md
docs/runbooks/: README.md  chaos-testing.md  local-stack.md
docs/stage-summaries/: stage-01-foundation.md  stage-02-api.md  stage-03-agents.md  stage-04-rag.md  stage-05-observability.md  stage-06-mlops.md  stage-07-kubernetes.md  stage-08-security.md  stage-09-reliability.md
docs/verification-log/: stage-01-foundation.md  stage-02-api.md  stage-03-agents.md  stage-04-rag.md  stage-05-observability.md  stage-06-mlops.md  stage-07-kubernetes.md  stage-08-security.md  stage-09-reliability.md
examples/: README.md  check_health.py
infrastructure/docker/grafana/provisioning/alerting/: api-rules.yml  reliability-rules.yml
infrastructure/docker/grafana/provisioning/dashboards/: api-overview.json  dashboards.yml
infrastructure/docker/grafana/provisioning/datasources/: prometheus.yml  tempo.yml
infrastructure/docker/otel-collector/: config.yml
infrastructure/docker/prometheus/: prometheus.yml
infrastructure/docker/tempo/: tempo.yml
infrastructure/kubernetes/: README.md
infrastructure/kubernetes/helm/production-llm-platform/: .helmignore  Chart.yaml  README.md  values.yaml
infrastructure/kubernetes/helm/production-llm-platform/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  dev-datastores.yaml  hpa.yaml  secret.yaml  service.yaml
infrastructure/terraform/: .gitignore  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/terraform/modules/cluster/: main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/terraform/modules/networking/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/postgres/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/redis/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/storage/: main.tf  variables.tf
migrations/: 0001_conversations.sql
scripts/: README.md  build_architecture.py  evaluate.py  generate_api_key.py  ingest.py  mermaid-config.json  smoke_health.sh  verify.ps1  verify.sh
services/: __init__.py
services/agents/: README.md  __init__.py  base.py  tools.py
services/api/: __init__.py  __main__.py  app.py  completions.py  errors.py  metrics.py  middleware.py  schemas.py  security.py
services/api/routes/: __init__.py  chat.py  health.py  meta.py
services/evaluation/: README.md  __init__.py  base.py  baseline.py  dataset.py  judge.py  metrics.py  retrieval.py
services/monitoring/: README.md  __init__.py  base.py  tracing.py
services/orchestrator/: README.md  __init__.py  base.py  conversations.py  graph.py  llm.py
services/retrieval/: README.md  __init__.py  base.py  egress.py  embeddings.py  ingest.py  retriever.py  store.py  tool.py
services/security/: README.md  __init__.py  auth.py  base.py  guardrails.py  rate_limit.py
shared/: __init__.py  config.py  datastores.py  logging.py  metrics.py  migrations.py  observability.py  resilience.py  version.py
tests/: conftest.py  fakes.py
tests/load/: README.md  locustfile.py
tests/unit/: test_architecture.py  test_chat.py  test_config.py  test_conversations.py  test_datastores.py  test_embeddings.py  test_evaluation.py  test_graph.py  test_health.py  test_ingest.py  test_integration_agent.py  test_integration_retrieval.py  test_llm.py  test_load_profile_compose.py  test_logging.py  test_migrations.py  test_resilience.py  test_retrieval_tool.py  test_security.py  test_tools.py  test_tracing.py
