[project]
name = "production-llm-platform"
version = "0.1.0"
description = "A production-grade LLM platform — built in 10 stages. Stage 1: foundation and tooling."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "production-llm-platform maintainers" }]

# Base runtime dependencies. These are the ONLY packages required to run the
# API through Stage 2. Heavy future-stage libraries (LangChain, LangGraph,
# LlamaIndex, OpenTelemetry SDK) remain optional extras below so the base
# install stays small and `uv sync` stays fast and reliable.
# All versions are pinned exactly (== ) — see ADR 0001 for rationale.
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.51.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "prometheus-client==0.25.0",
    # Datastore drivers — promoted out of the `datastores` extra in Stage 2,
    # when the API actually started connecting to Postgres and Redis (ADR 0005).
    "asyncpg==0.31.0",
    "redis==8.0.1",
    # Qdrant is reached over its HTTP API via a pooled AsyncClient rather than
    # `qdrant-client`, which is a Stage 4 (retrieval) dependency — ADR 0005.
    # httpx is therefore a runtime dep from Stage 2, not just a test-only one.
    "httpx==0.28.1",
    # Normally transitive (via anyio -> httpx). Pinned as an explicit direct
    # dependency to work around a cross-drive uv install quirk on this machine
    # where it was silently not installed, causing an import-time crash. See
    # "Known environment quirks" in CLAUDE.md.
    "sniffio>=1.3.1",
    # Agent orchestration — promoted out of the `orchestration` extra in Stage 3,
    # when the chat endpoint started running a real LangGraph agent loop against
    # the Anthropic API (ADR 0006). `langchain` was NOT promoted: the graph calls
    # the Anthropic SDK directly, so the LangChain core abstractions buy nothing
    # and cost a large transitive tree. See ADR 0006.
    "anthropic==0.116.0",
    "langgraph==1.2.9",
    # Retrieval / RAG — promoted out of the `retrieval` extra in Stage 4, when
    # the chat endpoint started grounding answers in retrieved documents and
    # ingestion started putting data in Qdrant (ADR 0011/0012).
    #
    # `llama-index-core`, NOT the `llama-index` meta-package: the meta-package
    # depends on llama-index-llms-openai and llama-index-embeddings-openai, so
    # promoting it would install a rival vendor's SDK into the base image to run
    # an Anthropic + Voyage stack. Only the ingestion primitives are used
    # (Document, SentenceSplitter), and those live in core. Same call, and the
    # same reasoning, as dropping `langchain` in Stage 3 — see ADR 0011.
    "llama-index-core==0.14.23",
    # Embeddings. Anthropic ships no embeddings API; Voyage is the documented
    # pairing for Claude RAG workloads (ADR 0011).
    "voyageai==0.5.0",
    # Qdrant's own client, replacing Stage 2's raw-httpx /readyz probe now that
    # the collection actually holds vectors (ADR 0012).
    "qdrant-client==1.18.0",
]

[project.optional-dependencies]
# --- Future-stage libraries: DECLARED and pinned now, wired up in later stages. ---
# NOTE: the `orchestration` extra (langchain, langgraph) was removed in Stage 3.
# `langgraph` and `anthropic` are now base dependencies — the API runs the agent
# loop on every chat request and they are no longer optional. `langchain` was
# dropped entirely rather than promoted (ADR 0006).
# NOTE: the `retrieval` extra (llama-index, qdrant-client) was removed in Stage 4
# — retrieval is now a base concern. See the base dependencies above for why
# `llama-index-core` was promoted in place of the `llama-index` meta-package.
# Stage 5 (observability backends: OTel export, collector).
observability = [
    "opentelemetry-api==1.43.0",
    "opentelemetry-sdk==1.43.0",
    "opentelemetry-instrumentation-fastapi==0.64b0",
]
# NOTE: the `datastores` extra (redis, asyncpg) was removed in Stage 2 — those
# drivers are now base dependencies, since the API connects to Postgres and
# Redis on every startup and they are no longer optional.

[dependency-groups]
# Developer tooling — installed by `uv sync` by default, excluded from images.
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    # NOTE: httpx moved to base dependencies in Stage 2 (pooled Qdrant client);
    # TestClient still relies on it, but it is no longer dev-only.
    "ruff==0.15.21",
    "mypy==2.3.0",
    "pre-commit==4.6.0",
    "markdown-it-py==4.0.0",
]

[tool.uv]
# Application project, not a distributable library: uv should manage the venv
# and install dependencies, but not attempt to build/install this repo as a
# package. Packages are imported via the repo-root path (see pytest config).
package = false

# Copy files into the venv instead of hardlinking them from uv's cache.
# uv's default hardlink mode fails when the cache and the venv are on different
# drives — and it fails SILENTLY, leaving a package in uv.lock but absent from
# the venv, which surfaces later as a baffling ModuleNotFoundError or an
# import-time crash. This repo lives on D: while the cache defaults to C:, and
# that has already bitten twice here.
#
# Declared here rather than relying on the UV_LINK_MODE env var so it also
# protects anyone who clones the repo onto a drive other than their uv cache.
# The env var still takes precedence for anyone who needs to override it.
link-mode = "copy"

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (replaces black + isort + flake8). See ADR 0001.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["services", "shared", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# mypy — static type checking in STRICT mode. See ADR 0001.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
files = ["services", "shared", "tests", "scripts"]
# `scripts/` is not a package and is imported by path in tests (the build script
# is a CLI, not a library). Tell mypy where to resolve it from.
mypy_path = "scripts"

[[tool.mypy.overrides]]
# Third-party libs without bundled type hints — do not fail strict mode on them.
# asyncpg ships no py.typed marker (as of 0.31.0); redis and httpx do.
module = ["prometheus_client.*", "asyncpg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# voyageai DOES ship py.typed, but its __init__ re-exports implicitly
# (`from voyageai.client_async import AsyncClient`, no __all__, no `as` alias).
# Our `no_implicit_reexport = true` therefore rejects the documented public
# path `voyageai.AsyncClient`. Scoped to voyageai's own modules: it relaxes how
# mypy reads THAT package, not how it checks ours. The alternative — importing
# `voyageai.client_async.AsyncClient` — would bind us to an internal module path
# to work around someone else's packaging.
module = ["voyageai.*"]
implicit_reexport = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
# Repo root on the path so `import shared` / `import services...` works without
# packaging the project (package = false above).
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
